2013-07-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fix the alerts status pie graph
	to make it more usefull

	* godmode/agentes/agent_wizard.snmp_interfaces_explorer.php: Comment
	code

2013-07-09  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	images/wand_agent.png
	images/wand_snmp.png
	images/wand_wmi.png
	images/wand_interfaces.png
	godmode/agentes/agent_wizard.php
	godmode/agentes/configurar_agente.php: Add new subtab to
	agent wizard

2013-07-08  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_modules.js
	include/functions_wmi.php
	extensions/snmp_explorer.php
	godmode/agentes/agent_wizard.wmi_explorer.php
	godmode/agentes/agent_wizard.snmp_interfaces_explorer.php
	godmode/agentes/agent_wizard.php
	godmode/agentes/configurar_agente.php: Replace the SNMP explorer by 
	the Agent wizard with two initial sections. SNMP interfaces explorer
	and WMI explorer

2013-07-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/modules.php, mobile/include/style/main.css:
	yes another fixes.
	
	MERGED FROM BRANCH 4.0

2013-07-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/alerts.php, mobile/operation/events.php,
	mobile/operation/modules.php, mobile/operation/networkmaps.php,
	mobile/operation/agents.php, mobile/include/ui.class.php,
	mobile/include/style/main.css: some fixes.
	
	MERGED FROM BRANCH 4.0

2013-07-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_events.php: erased lost debug trace.
	
	* mobile/operation/events.php: some fixes in the pagination, and
	now the events from the system show the name "system".
	
	MERGED FROM BRANCH 4.0

2013-07-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/include/style/main.css: some
	fixes.
	
	MERGED FROM BRANCH 4.0

2013-07-05 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/alerts/alert_list.builder.php: Small changes. Make